--- a/.gitignore
+++ b/.gitignore
@@ -157,7 +157,7 @@ _NCrunch_*
 nCrunchTemp_*
 
 # MightyMoose
-*.mm.*
+.mm.
 AutoTest.Net/
 
 # Web workbench (sass)
@@ -197,7 +197,7 @@ PublishScripts/
 # NuGet Symbol Packages
 *.snupkg
 # The packages folder can be ignored because of Package Restore
-**/[Pp]ackages/*
+*/[Pp]ackages/
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
@@ -421,12 +421,12 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-**/.vscode/*
+*/.vscode/
 **/!.vscode/settings.json
 **/!.vscode/tasks.json
 **/!.vscode/launch.json
 **/!.vscode/extensions.json
-**/.history/*
+*/.history/
 
 # Miscellaneous
 **/.angular/cache
@@ -447,51 +447,8 @@ yarn-error.log
 
 **/*.angular/cache/
 
-**/.angular/*
+*/.angular/
 
 **/*.cache
 
 *.xml
-
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
-
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
-
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
