created login api and common components input, button, loader and control-error

--- a/HelloDoc_Backend/HelloDoc_Api/appsettings.json
+++ b/HelloDoc_Backend/HelloDoc_Api/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=HelloDoc;Username=postgres;Password=tatva123"
+  },
+  "MailSettings": {
+    "Mail": "fake79318@gmail.com",
+    "DisplayName": "HelloDoc",
+    "Password": "qaglgcqggsxigdcp",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+  "Jwt": {
+    "Key": "YourSecretKeyForAuthenticationOfApplication",
+    "Issuer": "https://localhost:5062",
+    "Audience": "https://localhost:5062"
+  }
 }
