--- a/HelloDoc_Backend/HelloDoc_Common/HelloDoc_Common.csproj
+++ b/HelloDoc_Backend/HelloDoc_Common/HelloDoc_Common.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
 
 </Project>
