--- a/HelloDoc_Frontend/package.json
+++ b/HelloDoc_Frontend/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "crypto-js": "^4.2.0",
     "ngx-toastr": "^19.0.0",
     "primeng": "^17.18.1",
     "rxjs": "~7.8.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.0",
     "@angular/localize": "^17.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
