--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "datasource",
         "SORTCOLUMN",
-        "SORTORDER"
+        "SORTORDER",
+        "toastr"
     ]
 }
